crates/lyra-tests/tests/snapshots/corpus__lrm__6__6.19.0__enum_declarations__enum_autoinc_overflow.snap
---
source: crates/lyra-tests/tests/corpus.rs
expression: ws.dump_diagnostics()
---
// file: main.sv (2 diagnostics)
  error[lyra.semantic.enum_value_overflow] 5:32..5:32: enum member `c` value 2 is outside the representable range of 1-bit unsigned base type
  error[lyra.semantic.enum_value_overflow] 9:31..9:31: enum member `q` value 4 is outside the representable range of 2-bit unsigned base type
---
unit (0 diagnostics)
