crates/lyra-tests/tests/snapshots/corpus__lrm__6__6.19.0__enum_declarations__enum_duplicate_values.snap
---
source: crates/lyra-tests/tests/corpus.rs
expression: ws.dump_diagnostics()
---
// file: main.sv (2 diagnostics)
  error[lyra.semantic.enum_duplicate_value] 5:29..5:29: enum member `d` has value 8 which duplicates an earlier member
  error[lyra.semantic.enum_duplicate_value] 9:21..9:21: enum member `y` has value 1 which duplicates an earlier member
---
unit (0 diagnostics)
