crates/lyra-tests/tests/snapshots/corpus__lrm__6__6.19.0__enum_declarations__enum_member_dup_scope.snap
---
source: crates/lyra-tests/tests/corpus.rs
expression: ws.dump_diagnostics()
---
// file: main.sv (3 diagnostics)
  error[lyra.semantic.duplicate_definition] 8:17..8:17: duplicate definition of `IDLE`
  error[lyra.semantic.duplicate_definition] 13:8..13:8: duplicate definition of `OFF`
  error[lyra.semantic.duplicate_definition] 18:17..18:17: duplicate definition of `X`
---
unit (0 diagnostics)
