crates/lyra-tests/tests/snapshots/corpus__lrm__6__6.19.0__enum_declarations__enum_sized_literal_width.snap
---
source: crates/lyra-tests/tests/corpus.rs
expression: ws.dump_diagnostics()
---
// file: main.sv (2 diagnostics)
  error[lyra.semantic.enum_sized_literal_width] 5:26..5:26: sized literal width 5 does not match enum base width 4
  error[lyra.semantic.enum_sized_literal_width] 5:39..5:39: sized literal width 3 does not match enum base width 4
---
unit (0 diagnostics)
